Modifikasi view/pics/bulk_new, but now fix

--- a/app/views/terminal_fourths/index.html.erb
+++ b/app/views/terminal_fourths/index.html.erb
@@ -14,9 +14,10 @@
       <th>Stuffing</th>
       <th>Update Finish</th>
       <th>Edit</th>
-      <th>Destroy</th>
+      <th>Delete</th>
     </tr>
   </thead>
   <tbody>
+    <font size="5"></font
   </tbody>
 </table>
