--- a/app/views/terminal_fourths/show.html.erb
+++ b/app/views/terminal_fourths/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Item:</strong>
-  <%= @terminal_fourth.item_id %>
+  <%= @terminal_fourth.item_name %>
 </p>
 
 <%= link_to 'Edit', edit_terminal_fourth_path(@terminal_fourth) %> |
