--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(employee) do |f| %>
+<%= form_for @employee, validate: true do |f| %>
   <% if employee.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(employee.errors.count, "error") %> prohibited this employee from being saved:</h2>
@@ -13,7 +13,7 @@
 
   <div class="row">
     <div class="col-md-1"><%= f.label :name %></div>
-    <div class="col-md-1"><%= f.text_field :name %></div>
+    <div class="col-md-1"><%= f.text_field :name, validate: { presence: true, uniqueness: false } %></div>
   </div>
   <br>
 
