--- a/app/views/reports/productivity_person.pdf.erb
+++ b/app/views/reports/productivity_person.pdf.erb
@@ -23,11 +23,12 @@
       </td>
       <td><b>WH :
         <% total_wh = 0 %>
-        <% @data_report_person.each do |pic| %>
+        <% @data_report_person_wh.each do |pic| %>
           <% total_wh += pic.wh %>
           <% end %>
         <%=  total_wh %></b>
       </td>
+
     </tr>
 </table>
 <br>
@@ -46,7 +47,7 @@
         <tr>
           <td><%= pic.part.number %></td>
           <td><%= pic.part.name %></td>
-          <td><%= pic.total_qty %></td>
+          <td><%= pic.total_qty.to_i %></td>
           <td><%= pic.part.norms %></td>
           <td><%= (pic.total_qty  * pic.part.norms).to_s(:rounded) %></td>
         </tr>
