--- a/app/views/reports/test.html.erb
+++ b/app/views/reports/test.html.erb
@@ -1,21 +1,38 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      1 of 2
-    </div>
-    <div class="col">
-      1 of 2
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
-    </div>
-  </div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+<title>FURNILAC PRIMAGUNA, PT.</title>
+<link href="stylesheets/jquery-ui.css.erb" rel="stylesheet" type="text/css">
+</head>
+<body>
+<h3><center><b>LAPORAN PRODUKTIVITAS PRODUKSI PERSON </b></center></h3>
+<center>
+  <table width="600px">
+    <tr>
+      <td><b>WH :
+        <% total_wh = 0 %>
+        <% @data_report_person_wh.each do |pic| %>
+          <% total_wh += pic.wh %>
+          <% end %>
+        <%=  total_wh %></b>
+      </td>
+    </tr>
+</table>
+<br>
+<!-- <p>Show With Range Date -->
+<br><br><br>
+<script type="text/javascript">
+  $( "#start" ).datepicker({
+    dateFormat: 'dd-mm-yy',
+    inline: true
+  });
+</script>
+
+<script type="text/javascript">
+  $( "#end" ).datepicker({
+    dateFormat: 'dd-mm-yy',
+    inline: true
+  });
+</script>
+</body>
+</html>
