Create table twh, modif table pic, modif view pic, area, twh

--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -24,10 +24,11 @@
           <ul class="dropdown-menu">
             <li><%= link_to 'Department', departments_path %></li>
             <li><%= link_to 'Division', divisions_path %></li>
-            <li><%= link_to 'Area', areas_path %></li>
+            <!-- <li><%#= link_to 'Area', areas_path %></li> -->
             <li><%= link_to 'Item', items_path %></li>
             <li><%#= link_to 'Part', parts_path %></li>
-            <li><%= link_to 'PIC', pics_path %></li>
+            <li><%= link_to 'TWH', twhs_path %></li>
+            <!-- <li><%#= link_to 'PIC', pics_path %></li> -->
             <%# if can? :read, Report %>
             <li><%= link_to "Report Person",report_person_path %></li>
             <%# end %>
