--- a/app/views/pics/bulk_new.html.erb
+++ b/app/views/pics/bulk_new.html.erb
@@ -1,27 +1,27 @@
-<%= nested_form_for(@area, validate: true, url: bulk_insert_area_pics_path, method: :POST) do |f| %>
+<%= nested_form_for(@twh, url: bulk_insert_twh_pics_path, method: :POST) do |f| %>
   <div class="row">
     <div class="col-md-3">
-      Area : <%= f.text_field :name, validate: { presence: true, uniqueness: false }, disabled: true %>
+      <%= f.text_field :area_id, disabled: true %>
+    </div>
+    <div class="col-md-3">
+      <%= f.text_field :pic_date, disabled: true %>
+    </div>
+    <div class="col-md-3">
+      <%= f.text_field :wh, disabled: true %>
     </div>
   </div>
   <br>
 
-  <% @area.pics.each do |pic| %>
+  <% @twh.pics.each do |pic| %>
     <% if pic.new_record? %>
         <%= f.fields_for :pics, pic do |pic_form_fields| %>
         <div class="row">
           <div class="col-md-2">
-            <%= pic_form_fields.text_field :pic_date, validate: { presence: true, uniqueness: false }, :class => "dp" %>
-          </div>
-          <div class="col-md-2">
-            <%= pic_form_fields.text_field :wh, validate: { presence: true, uniqueness: false }, :class => "wh", placeholder: "WH" %>
-          </div>
-          <div class="col-md-2">
-            <%= pic_form_fields.text_field :qty, validate: { presence: true, uniqueness: false }, placeholder: "QTY" %>
-          </div>
-          <div class="col-md-2">
             <%= pic_form_fields.select(:part_id, [], {}, { :class => 'ComboPart' }) %>
             <%#= pic_form_fields.collection_select :part_id, Part.all, :id, :number, { include_blank: true }, { :class => "ComboPart" } %>
+          </div>
+          <div class="col-md-2">
+            <%= pic_form_fields.text_field :qty, placeholder: "QTY" %>
           </div>
           <div class="col-md-4">
             <%= pic_form_fields.link_to_remove "DESTROY", :class => "btn btn-danger btn-sm"%>
