--- a/app/views/reports/productivity_person.pdf.erb
+++ b/app/views/reports/productivity_person.pdf.erb
@@ -23,7 +23,7 @@
       </td>
       <td><b>WH :
         <% total_wh = 0 %>
-        <% @data_report_person_wh.each do |pic| %>
+        <% @data_report_person.each do |pic| %>
           <% total_wh += pic.wh %>
           <% end %>
         <%=  total_wh %></b>
