Modif Name Twh in View

--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -27,7 +27,7 @@
             <!-- <li><%#= link_to 'Area', areas_path %></li> -->
             <li><%= link_to 'Item', items_path %></li>
             <li><%#= link_to 'Part', parts_path %></li>
-            <li><%= link_to 'TWH', twhs_path %></li>
+            <li><%= link_to 'PIC', twhs_path %></li>
             <!-- <li><%#= link_to 'PIC', pics_path %></li> -->
             <%# if can? :read, Report %>
             <li><%= link_to "Report Person",report_person_path %></li>
