--- a/app/views/twhs/index.html.erb
+++ b/app/views/twhs/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Twhs</h1>
+<h1></h1>
 
 <table id="TwhDataTables" data-source="<%= twhs_path(format: :json) %>" class="table table-bordered">
   <thead>
@@ -8,7 +8,6 @@
       <th>Area</th>
       <th>Pic date</th>
       <th>Wh</th>
-      <th>Insert</th>
       <th>Edit</th>
     </tr>
   </thead>
@@ -20,4 +19,4 @@
 
 <br>
 
-<%= link_to 'New Twh', new_twh_path %>
+<%= link_to 'NEW', new_twh_path %>
