Revisi View and Report Productivity

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Department', new_department_path %>
+<%= link_to 'NEW', new_department_path, :class => "btn btn-primary btn-lg" %>
