--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -9,7 +9,6 @@
       <th>Division Name</th>
       <th>Employee</th>
       <th>Edit</th>
-      <th>Delete</th>
     </tr>
   </thead>
 
@@ -19,4 +18,4 @@
 
 <br>
 
-<%= link_to 'New Division', new_division_path %>
+<%= link_to 'NEW', new_division_path, :class => "btn btn-primary btn-lg" %>
