--- a/app/views/twhs/edit.html.erb
+++ b/app/views/twhs/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', twh: @twh %>
 
-<%= link_to 'Show', @twh %> |
-<%= link_to 'Back', twhs_path %>
+<%#= link_to 'Show', @twh %> 
+<%#= link_to 'Back', twhs_path %>
