--- a/app/views/divisions/edit.html.erb
+++ b/app/views/divisions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', division: @division %>
 
-<%= link_to 'Show', @division %> |
-<%= link_to 'Back', divisions_path %>
+<%#= link_to 'Show', @division %> 
+<%#= link_to 'Back', divisions_path %>
