--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,27 +2,18 @@
 
 <h1>Items</h1>
 
-<table class="table table-bordered">
+<table id="ItemDataTables" data-source="<%= items_path(format: :json) %>" class="table table-bordered">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3">Action</th>
+      <th>Edit</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.name %></td>
-        <!-- <td><%#= link_to 'Show', item %></td> -->
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-    <%= will_paginate @articles %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Item', new_item_path %>
+<%= link_to 'NEW', new_item_path, :class => "btn btn-primary btn-lg" %>
