--- a/app/views/reports/test.html.erb
+++ b/app/views/reports/test.html.erb
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,27 +11,29 @@
 <center>
   <table width="600px">
     <tr>
-      <td><b>WH :
-        <% total_wh = 0 %>
-        <% @data_report_person_wh.each do |pic| %>
-          <% total_wh += pic.wh %>
-          <% end %>
-        <%=  total_wh %></b>
-      </td>
+      <left>
+        <%#= form_tag('/report_person', method: :get) do %>
+        <%= form_tag(test_path(format: 'pdf'), method: :get) do %>
+        <%= text_field_tag 'start_date'%>
+        <%= text_field_tag 'end_date'%>
+        <%= submit_tag 'Show' %>
+        <% end %>
+</center>
+      </left>
     </tr>
 </table>
 <br>
 <!-- <p>Show With Range Date -->
 <br><br><br>
 <script type="text/javascript">
-  $( "#start" ).datepicker({
+  $( "#start_date" ).datepicker({
     dateFormat: 'dd-mm-yy',
     inline: true
   });
 </script>
 
 <script type="text/javascript">
-  $( "#end" ).datepicker({
+  $( "#end_date" ).datepicker({
     dateFormat: 'dd-mm-yy',
     inline: true
   });
