Modif Report productivity people

--- a/app/views/reports/productivity_people.html.erb
+++ b/app/views/reports/productivity_people.html.erb
@@ -30,14 +30,14 @@
 </html>
 <script type="text/javascript">
   $( "#start_date" ).datepicker({
-    dateFormat: 'dd-mm-yy',
+    dateFormat: 'yy-mm-dd',
     inline: true
   });
 </script>
 
 <script type="text/javascript">
   $( "#end_date" ).datepicker({
-    dateFormat: 'dd-mm-yy',
+    dateFormat: 'yy-mm-dd',
     inline: true
   });
 </script>
