--- a/app/views/reports/test.html.erb
+++ b/app/views/reports/test.html.erb
@@ -27,14 +27,14 @@
 <br><br><br>
 <script type="text/javascript">
   $( "#start_date" ).datepicker({
-    dateFormat: 'dd-mm-yy',
+    dateFormat: 'yy-mm-dd',
     inline: true
   });
 </script>
 
 <script type="text/javascript">
   $( "#end_date" ).datepicker({
-    dateFormat: 'dd-mm-yy',
+    dateFormat: 'yy-mm-dd',
     inline: true
   });
 </script>
