--- a/app/views/reports/productivity_person.pdf.erb
+++ b/app/views/reports/productivity_person.pdf.erb
@@ -10,8 +10,8 @@
   <table width="600px">
     <tr>
       <td><b>Periode : <%= params[:start_date] %> s/d <%= params[:end_date] %></b></td>
-      <td><b>Karu : <%= @area.employee.name %></b></td>
-      <td><b>Area : <%= @area.name %> </b> </td>
+      <!-- <td><b>Karu : <%#= @area.employee.name %></b></td> -->
+      <td><b>Area/Karu : <%= @area.name %> </b> </td>
     </tr>
     <tr>
       <td><b>EH :
