--- a/app/views/reports/test.html.erb
+++ b/app/views/reports/test.html.erb
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,24 +5,29 @@
 <link href="stylesheets/jquery-ui.css.erb" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h3><center><b>LAPORAN PRODUKTIVITAS PRODUKSI PERSON </b></center></h3>
-<center>
-  <table width="600px">
-    <tr>
-      <left>
-        <%#= form_tag('/report_person', method: :get) do %>
-        <%= form_tag(test_path(format: 'pdf'), method: :get) do %>
-        <%= text_field_tag 'start_date'%>
-        <%= text_field_tag 'end_date'%>
-        <%= submit_tag 'Show' %>
-        <% end %>
-</center>
-      </left>
-    </tr>
-</table>
-<br>
-<!-- <p>Show With Range Date -->
-<br><br><br>
+<h3><center><b>LAPORAN PRODUKTIVITAS PRODUKSI </b></center></h3>
+
+  <center>
+    <table border="1" width="600px">
+      <br>
+      <table width="600px">
+        <center>
+        <tr><left>
+          <%#= form_tag('/report_people.pdf', method: :get) do %>
+          <%= form_tag(test_path(format: 'pdf'), method: :get) do %>
+          <%= text_field_tag 'start_date'%>
+          <%= text_field_tag 'end_date'%>
+          <%= submit_tag 'show', disabled: false %>
+          <% end %>
+        </left>
+        </tr>
+        </center>
+      </table>
+      <br>
+    </table>
+  </center>
+</body>
+</html>
 <script type="text/javascript">
   $( "#start_date" ).datepicker({
     dateFormat: 'yy-mm-dd',
@@ -38,5 +41,3 @@
     inline: true
   });
 </script>
-</body>
-</html>
