--- a/app/views/reports/test.pdf.erb
+++ b/app/views/reports/test.pdf.erb
@@ -11,16 +11,11 @@
     <tr>
       <td><b>Periode : <%= params[:start_date] %> s/d <%= params[:end_date] %></b></td>
     </tr>
-    <tr>
-
-
-    </tr>
 </table>
 <br>
 <!-- <p>Show With Range Date -->
 <center><table border="1"  width="600px">
         <th  width="280px"><b><center>Area/PIC</center></th>
-        <!-- <th width="200px"><center><b>PIC</th> -->
         <th><b><center>EH</th>
         <th><b><center>WH</th>
         <th><b><center>P</th>
@@ -30,7 +25,6 @@
       <% @data_report_people_area_test.each do |pic| %>
         <tr>
           <td><%= pic.area %></td>
-          <!-- <td><%#= pic.pic %></td> -->
           <td><%= pic.eh.round(2) %></td>
           <td><%= pic.wh %></td>
           <td><%= pic.nilai_p.round(0) %>%</td>
@@ -45,26 +39,27 @@
 </html>
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <script type="text/javascript">
-
-window.onload = function () {
-	var chart = new CanvasJS.Chart("chartContainer", {
-		theme: "theme2",//theme1
-		title:{
-			text: "Basic Column Chart - CanvasJS"
-		},
-		animationEnabled: false,   // change to true
-		data: [
-		{
-			// Change type to "bar", "area", "spline", "pie",etc.
-			type: "column",
-			dataPoints: [
-        <% Pics.each do |pic| %>
-				{ label: <%= pic.area %>,  y: <%= pic.nilai_p.round(0) %>  }
-        <% end %>
-			]
-		}
-		]
-	});
-	chart.render();
-}
+  window.onload = function () {
+  	var chart = new CanvasJS.Chart("chartContainer", {
+  		theme: "theme2",//theme1
+  		title:{
+  			text: "Basic Column Chart - CanvasJS"
+  		},
+  		animationEnabled: false,   // change to true
+  		data: [
+  		{
+  			// Change type to "bar", "area", "spline", "pie",etc.
+  			type: "column",
+        dataPoints: [
+        { label: "apple",  y: 10  },
+				{ label: "orange", y: 15  },
+				{ label: "banana", y: 25  },
+				{ label: "mango",  y: 30  },
+				{ label: "grape",  y: 28  }
+  			]
+  		}
+  		]
+  	});
+  	chart.render();
+  }
 </script>
