Revisi Report and sort combobox

--- a/app/views/reports/productivity_people.html.erb
+++ b/app/views/reports/productivity_people.html.erb
@@ -14,6 +14,7 @@
         <center>
         <tr><left>
           <%#= form_tag('/report_people.pdf', method: :get) do %>
+          <%#= form_tag('/report_people', method: :get) do %>
           <%= form_tag(report_people_path(format: 'pdf'), method: :get) do %>
           <%= text_field_tag 'start_date'%>
           <%= text_field_tag 'end_date'%>
@@ -26,6 +27,7 @@
       <br>
     </table>
   </center>
+  <br>
 </body>
 </html>
 <script type="text/javascript">
