--- a/app/views/reports/test.pdf.erb
+++ b/app/views/reports/test.pdf.erb
@@ -34,32 +34,35 @@
     </tr>
 </table>
 <br><br><br>
-<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+<div id="chartContainer" style="height: 300px; width: 100%;"></div></body>
 </body>
 </html>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <script type="text/javascript">
   window.onload = function () {
-  	var chart = new CanvasJS.Chart("chartContainer", {
-  		theme: "theme2",//theme1
+  	var chart = new CanvasJS.Chart(".chartContainer",{
   		title:{
-  			text: "Basic Column Chart - CanvasJS"
+  			text: "Pareto Chart of Fast Food Chains"
   		},
-  		animationEnabled: false,   // change to true
   		data: [
   		{
-  			// Change type to "bar", "area", "spline", "pie",etc.
-  			type: "column",
-        dataPoints: [
-        { label: "apple",  y: 10  },
-				{ label: "orange", y: 15  },
-				{ label: "banana", y: 25  },
-				{ label: "mango",  y: 30  },
-				{ label: "grape",  y: 28  }
+  		type: "column",
+  			dataPoints: [
+          <% @data_report_people_area_test.each do |pic| %>
+              { label: "<%= pic.area %>",  y: <%= pic.nilai_p.round(0) %>  },
+            <% end %>
   			]
   		}
   		]
   	});
+
   	chart.render();
+  	createPareto(chart);
+
+  	function createPareto(chart){
+  		var dps = [];
+
+  		chart.addTo("data",{type:"line", yValueFormatString: "0'%'", dataPoints: dps});
+  	}
   }
 </script>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
